Edits according to MGO, my edits and additions to the text

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -9,33 +9,46 @@ const currentYear = new Date().getFullYear();
   <div class="container site-footer-inner">
     <div class="site-footer-columns">
       <div class="site-footer-column">
-        <h3 class="site-footer-title">Superodpočet.sk</h3>
-        <p class="site-footer-text">
-          Informácie a nástroje pre daňové odpočty na Slovensku.
-        </p>
-      </div>
-
-      <div class="site-footer-column">
-        <h3 class="site-footer-title">Odkazy</h3>
+        <h3 class="site-footer-title">SmarTech Solutions</h3>
         <ul class="site-footer-links">
-          <li><a href="/vyskum-a-vyvoj">Výskum a vývoj</a></li>
-          <li><a href="/investicie">Investície do Priemyslu 4.0</a></li>
-          <li><a href="/patent-box">Patent Box</a></li>
+          <li><a href="https://www.smartech.sk/kontakt/predaudit-konzultacia">Predaudit</a></li>
+          <li><a href="https://www.smartech.sk/novinky">Novinky</a></li>
+          <li><a href="https://www.linkedin.com/company/smartech-solutions-sk">LinkedIn</a></li>
         </ul>
       </div>
 
       <div class="site-footer-column">
-        <h3 class="site-footer-title">Kontakt</h3>
-        <p class="site-footer-text">
-          <a
-            href="https://www.smartech.sk"
-            target="_blank"
-            rel="noopener"
-          >
-            SmarTech Solutions
-          </a>
-        </p>
+        <h3 class="site-footer-title">Superodpocet na výskum a vývoj</h3>
+        <ul class="site-footer-links">
+          <li><a href="https://www.financnasprava.sk//_img/pfsedit/Dokumenty_PFS/Zverejnovanie_dok/Dane/Metodicke_pokyny/Priame_dane_uct/2022/2022.12.29_33_DZPaU_20222_MP.pdf">
+            Metodický pokyn k odpočtu výdavkov (nákladov) na výskum a vývoj</a>
+          </li>
+          <li><a href="https://www.vedatechnika.sk/sk/veda-sr/strategicke-dokumenty/frascati-manual">Frascati manuál</a></li>
+          <li><a href="https://podpora.financnasprava.sk/414147-Odpočet-výdavkov-na-výskum-a-vývoj">FSSR FAQ</a></li>
+          <li><a href="https://www.smartech.sk/novinky/priebezne-vysledky-cerpania-superodpoctu-na-vyskum-a-vyvoj-za-rok-2023-11-12-2024">
+            Štatistika uplatňovania SO</a>
+          </li>
+        </ul>
       </div>
+
+      <div class="site-footer-column">
+        <h3 class="site-footer-title">Oslobodenie príjmov - patent box</h3>
+        <ul class="site-footer-links">
+          <li><a href="https://www.mfsr.sk/files/sk/dane-cla-uctovnictvo/uctovnictvo-audit/uctovnictvo/legislativa-sr/opatrenia-oblasti-uctovnictva/uctovnictvo-podnikatelov/podvojne-uctovnictvo/postupy-uctovania/uplne_znenie_2019.pdf">
+            Postupy účtovania</a></li>
+          <li><a href="https://podpora.financnasprava.sk/414147-Odpočet-výdavkov-na-výskum-a-vývoj">FSSR FAQ</a></li>
+        </ul>
+      </div>
+
+      <div class="site-footer-column">
+        <h3 class="site-footer-title">Superodpočet na investície</h3>
+        <ul class="site-footer-links">
+          <li><a href="https://www.financnasprava.sk/_img/pfsedit/Dokumenty_PFS/Zverejnovanie_dok/Dane/Metodicke_pokyny/Priame_dane_uct/2024/2024.01.04_002_DZPaU_2024_MP.pdf">
+            Metodický pokyn k odpočtu výdavkov (nákladov) na investície</a></li>
+          <li><a href="https://podpora.financnasprava.sk/484983-Sthttps://podpora.financnasprava.sk/184616-Odpočet-výdavkov-nákladov-na-investícieanoviská-FR-SR">FSSR FAQ</a></li>
+        </ul>
+      </div>
+
     </div>
 
     <div class="site-footer-bottom">
