--- a/src/pages/vyskum-a-vyvoj.astro
+++ b/src/pages/vyskum-a-vyvoj.astro
@@ -126,12 +126,12 @@ const contact = {
           </p>
 
           <a
-            href="https://www.smartech.sk"
+            href="https://www.smartech.sk/kontakt/predaudit-konzultacia"
             class="home-contact-button"
             target="_blank"
             rel="noopener"
           >
-            Kontaktujte nás
+            Kontaktujte SmarTech Solutions
           </a>
         </div>
 
