--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -79,6 +79,11 @@ h2 {
   max-width: 650px;
 }
 
+h3 {
+  font-size: 32px;
+  font-weight: 700;
+}
+
 /* Skip link pre prístupnosť */
 .skip-link {
   position: absolute;
@@ -246,7 +251,7 @@ h2 {
 
 .site-footer-columns {
   display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+  grid-template-columns: repeat(4, minmax(0, 1fr));
   gap: 24px;
   align-items: flex-start;
   margin-bottom: 24px;
@@ -452,6 +457,7 @@ h2 {
 .home-contact-contact {
   font-size: 24px; /* telefón a email 24px */
   margin: 0;
+  font-weight: 700;
   color: var(--color-red);
 }
 
@@ -641,6 +647,11 @@ padding-bottom: var(--section-padding-y);
   margin-top: 0;
 }
 
+.vav-intro-copy p {
+  margin: 50px 0 50px;
+  max-width: 700px;
+}
+
 /* ---------- VAV KALKULAČKA ---------- */
 
 .vav-calc-grid {
@@ -673,7 +684,7 @@ padding-bottom: var(--section-padding-y);
 .vav-calc-input {
   border-bottom-left-radius: var(--radius);
   border-bottom-right-radius: var(--radius);
-  padding: 8px 15px;
+  padding: 10px 15px;
   font-size: 18px;
   font-weight: 700;
   text-align: left;
@@ -689,7 +700,7 @@ padding-bottom: var(--section-padding-y);
   border-bottom-left-radius: var(--radius);
   border-bottom-right-radius: var(--radius);
   background-color: rgba(16, 68, 125, 0.1);
-  padding: 8px 10px;
+  padding: 10px 10px;
   cursor: pointer;
   display: flex;
   align-items: center;
